Fix left logo not showing on admin logos page.

--- a/Naaya/CHM2BE/skel/layout/chm-admin/default/administration.css
+++ b/Naaya/CHM2BE/skel/layout/chm-admin/default/administration.css
@@ -488,7 +488,7 @@ a#top_en,a#bottom_en {
 }
 
 /* Stuff to hide */
-#leftcolumn,#banner_image,#logo,#site-subtitle,#nav2,
+#leftcolumn,#banner_image,#site-subtitle,#nav2,
 .skiplink,.portlet-title,
 #frmEdit label.invisible,
 #tabbedmenu, .tabs_firstlevel, .hr_invisible,.tabs_admin,
